# logic_bombs

./: .gitignore  C  CA  CMakeLists.txt  LICENSE_BSD.txt  README  README.md  cleanup.py  compile.py  config.json  mmakefile.py  requirements.txt  res.json  run_tests.py  scrip_runner.py  script_runner.py  sha_bomb.c  template_parser.py  template_parser[Conflict].py  universal.py
config/: compile.json  test_settings.py
include/: a_tester.h  aes.h  sha1.h  utils.h
lib/: aes.c  crypto_utils.c  sha1.c  utils.c
script/: angr_run.py  angr_run3.py  klee_run.py  klee_run.sh  klee_run_cpp.py  mcore_run.py  triton_bak.py  triton_caller.py  triton_run.py
src/: a.out  cmake_install.cmake  covert_propagation.c  covpro_file.c  covpro_shell.c  covpro_syscall.c  crypto_aes.c  exception_handling.cpp  excp_1.cpp  excp_file.cpp  extfun_pow.c  extfun_rand.c  extfun_sin.c  file_exception.cpp  file_mover.py  floatpoint_2.c  input_exception.cpp  input_float.c  input_strcmp.c  jmp_array.c  jmp_indirect.c  paraprog_fork.c  paraprog_pthread.c  paraprog_socket.c  ping.c  pure_cpu.c  pure_net.c  sha.c  sha_bomb.c  simple_time.c  symarray.c  symarray_l1.c  symarray_l2.c  symjmp.c  symval_file.c  symval_syscall.c  symvar_argv.c  symvar_cpu.c  symvar_ping.c  symvar_syscall.c  (+5 more)
src/buffer_overflow/: heap_bo_l1.c  stack_bo_l1.c  stack_bo_l2.c  stacknocrash_bo_l1.c
src/contextual_symbolic_value/: file_csv.c  file_posix_csv.c  pid_csv.c  ping_csv.c  syscall_csv.c
src/covert_propogation/: df2cf_cp.c  df2cf_cp_l1.c  echo_cp.c  echofile_cp.c  echofile_cp_l1.c  file.c  file_cp.c  file_posix_cp_l1.c  socket_cp.c  socket_cp_l1.c  stack.c  stack_cp.c  stack_cp_l1.c  syscall.c
src/crypto/: aes.c
src/crypto_functions/: aes_cf.c  sha_cf.c
src/data_overflow/: multiply_do.c  plus_do.c
src/exception_handling/: 1.cpp  div0.cpp  file.cpp
src/external_functions/: atof_ef_l2.c  atoi_ef_l2.c  ln_ef.c  ln_ef_l2.c  pow.c  pow_ef_l2.c  printf_float_l1.c  printf_int_l1.c  printfloat_ef_l1.c  printint_int_l1.c  rand.c  rand_ef_l2.c  sin.c  sin_ef.c  sin_ef_l2.c
src/floating_point/: case1_fp.c  case2_fp.c  case3_fp.c  float1_fp_l1.c  float2_fp_l1.c  float3_fp_l2.c  float4_fp_l2.c  float5_fp_l2.c
src/floatpoint/: 1.c  2.c
src/hash/: aes.c  sha.c
src/integer_overflow/: multiply_do.c  multiplyint_to_l1.c  plus_do.c
src/loop/: 5n+1_lo_l1.c  7n+1_lo_l1.c  collaz_lo_l1.c  collaz_lo_l2.c  paraloop_lo_l2.c
src/memory_overflow/: stack_mo_l1.c  stack_mo_l2.c
src/overflow/: multiple.c  plus.c
src/parallel_program/: 2thread_pp_l1.c  2thread_pp_l2.c  fork.c  fork_pp.c  fork_pp_l1.c  forkpipe_pp_l1.c  forkshm_pp_l1.c  mthread_pp_l2.c  pthread.c  pthread_pp.c  pthread_pp_l1.c  pthread_pp_l2.c  socket.c
src/symbolic_array/: heaparray_realloc.c  l1.c  l2.c  out_of_boundary.c
src/symbolic_jump/: arrayjmp_sj_l2.c  jmp.c  jmp_sj_l1.c  jmp_table.c  pointers_sj_l1.c  ret_sj_l1.c
src/symbolic_memory/: heapoutofbound_sm_l2.c  l1array_sm.c  malloc_sm.c  malloc_sm_l1.c  outofbound_sm.c  realloc_sm_l1.c  stackarray_l2.c  stackarray_sm_l1.c  stackarray_sm_l2.c  stackarray_sm_ln.c  stackoutofbound_sm_l2.c
src/symbolic_value/: file.c  syscall.c
src/symbolic_variable/: argv.c  cpu.c  ping.c  syscall.c  time.c  vm.c  web.c
src/symbolic_variable_declaration/: pid_svd.c  stdin_svd.c  syscall.c  syscall_ls_svd.c  vm_svd.c  web_svd.c
src/utils/: crypto_utils.c  utils.c
src_cpp/covert_propagation/: div0_eh_cp.cpp  file_eh_cp.cpp  toy_eh_cp.cpp
src_cpp/symbolic_jump/: vectorjmp_sj_l2.cpp
src_cpp/symbolic_memory/: list_sm.cpp  vector_sm.cpp
src_furture/symbolic_variable_declaration/: cpu_svd.c  pid_svd.c  time_svd.c
templates/: angr.c  default.c  default_no_printf.c  klee.c  test.c
